[tool.poetry]
name = "capti"
version = "0.1.0"
description = "simple download organizer"
authors = ["lusamreth <somrethoverkill@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "main.py"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"

[tool.poetry.scripts]
start = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
